# bookmarks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-all-platforms.yml  test.yml
backend/: .env.example  Cargo.toml  task.md
backend/config/: default.toml  development.toml  production.toml
backend/examples/: highlight_demo.rs  simple_highlight_demo.rs
backend/migrations/: 20231201000001_create_users_table.sql  20231201000002_create_collections_table.sql  20231201000003_create_tags_table.sql  20231201000004_create_bookmarks_table.sql  20231201000005_create_bookmark_tags_table.sql  20231201000006_add_optimization_indexes.sql  20231201000006_create_triggers_and_functions copy.sql  20231201000007_seed_initial_data.sql  20231201000008_fix_foreign_keys_and_add_indexes.sql  20231203000001_fix_last_login_at_type.sql  20250104000001_create_tables.sql  20250104000001_setup_fts5.sql  20250104000002_migrate_fts_data.sql  20250104000002_optimize_indexes.sql  20250104000003_remove_bookmark_stats.sql  20250104000003_setup_fts5.sql  20250104000004_remove_updated_at_triggers.sql  20250104000004_seed_data.sql  20250104000005_optimize_indexes.sql  20250104000006_add_comprehensive_test_data.sql  20250105000005_refactor_bookmarks_to_resources.sql  20250107000006_remove_reading_time_and_difficulty.sql  20250108000007_fix_collection_resource_count.sql
backend/src/: lib.rs  main.rs  state.rs
backend/src/config/: app.rs  auth.rs  database.rs  loader.rs  mod.rs
backend/src/handlers/: auth.rs  bookmarks.rs  collections.rs  command.rs  mod.rs  resources.rs  search.rs  stats.rs  tags.rs
backend/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs
backend/src/models/: bookmark.rs  collection.rs  command.rs  mod.rs  pagination.rs  resource.rs  resource_test.rs  search.rs  stats.rs  tag.rs  user.rs
backend/src/routes/: auth.rs  bookmarks.rs  collections.rs  command.rs  mod.rs  resources.rs  search.rs  stats.rs  tags.rs
backend/src/services/: auth_service.rs  bookmark_service.rs  bookmark_service_test.rs  collection_service.rs  collection_service_test.rs  indexer_service.rs  maintenance_service.rs  mod.rs  query_helper.rs  resource_service.rs  search_service.rs  stats_service.rs  tag_service.rs  tantivy_index.rs  tantivy_search_service.rs
backend/src/utils/: error.rs  error_test.rs  jwt.rs  mod.rs  response.rs  response_test.rs  segmenter.rs  validation.rs
backend/tests/: fts_config_integration.rs  resource_api_integration.rs  segmentation_integration.rs
docs/: api-interface-specification.md  bookmarks-app-solution-architecture.md  database-design.md  deployment-guide.md  developer-guide.md  rust-backend-api-architecture.md  technical-decisions-template.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  task.md  vite.config.ts
(+54 files in other folders)
