[package]
name = "resources-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
] }

async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17"
axum-jwt-auth = "0.6"

# Configuration
config = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

# Validation
regex = "1.0"

# Lazy initialization
once_cell = "1.20"

# Full-text search (Chinese word segmentation for FTS5)
jieba-rs = { version = "0.8", optional = true }

[features]
default = []
jieba = ["jieba-rs"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
