[package]
name = "resources-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
] }

async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17"
axum-jwt-auth = "0.6"

# Configuration
config = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

# Validation
regex = "1.0"

# Lazy initialization
once_cell = "1.20"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Full-text search (Chinese word segmentation for FTS5)
jieba-rs = { version = "0.8", optional = true }

[features]
default = []
jieba = ["jieba-rs"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
# 测试框架增强
serial_test = "3.0"      # 串行测试支持
mockall = "0.12"         # Mock 支持
fake = "2.9"             # 假数据生成
# HTTP 测试
axum-test = "15.0"       # Axum 集成测试
tower = { version = "0.5", features = ["util"] }
# 断言增强
pretty_assertions = "1.4"
# 覆盖率工具（通过 cargo-tarpaulin 或 cargo-llvm-cov 使用）
